--- a/mongodb-demo/gateway-service/Dockerfile
+++ b/mongodb-demo/gateway-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-alpine
+FROM --platform=linux/amd64 openjdk:17-alpine
 COPY ./build/libs/gateway-service*SNAPSHOT.jar gateway-service.jar
 EXPOSE 8080
-ENTRYPOINT java -jar gateway-service.jar
+ENTRYPOINT sleep 50 && java -jar gateway-service.jar
