--- a/mongodb-demo/service-discovery/Dockerfile
+++ b/mongodb-demo/service-discovery/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-alpine
+FROM --platform=linux/amd64 openjdk:17-alpine
 COPY ./build/libs/service-discovery*SNAPSHOT.jar service-discovery.jar
 EXPOSE 8080
 ENTRYPOINT java -jar service-discovery.jar
