--- a/mongodb-demo/user-service/Dockerfile
+++ b/mongodb-demo/user-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-alpine
+FROM --platform=linux/amd64 openjdk:17-alpine
 COPY ./build/libs/user-service*SNAPSHOT.jar user-service.jar
 EXPOSE 8080
-ENTRYPOINT java -jar user-service.jar
+ENTRYPOINT sleep 60 && java -jar user-service.jar
