--- a/mongodb-demo/gateway-service/src/main/resources/application.yml
+++ b/mongodb-demo/gateway-service/src/main/resources/application.yml
@@ -7,27 +7,28 @@ spring:
         - id: userService
           uri: lb://USER-SERVICE
           predicates:
-            - Path=/**
+            - Path=/users/**
             - Method=GET,POST
-          # filters:
-          #   - AddRequestHeader=X-Client,CodeHuntersLocal
-          #   - name: Retry
-          #     args:
-          #       retries: 3
-          #       methods: GET,POST
-          #       backoff:
-          #         firstBackoff: 50ms
-          #         maxBackoff: 500ms
-#            - name: CircuitBreaker
-#              args:
-#                name: userService
-#                fallbackUri: forward:/userFallback #to an internal controller or handler within the gateway app
-#        - id: configServer
-#          uri: lb://CONFIG-SERVER
-#          predicates:
-#            - Path=/config/**
-#          filters:
-#            - RewritePath=/config/(?<segment>.*),/$\{segment}
+          filters:
+            - RewritePath=/users/(?<segment>.*),/$\{segment}
+            - AddRequestHeader=X-Client,CodeHuntersLocal
+            - name: Retry
+              args:
+               retries: 3
+               methods: GET
+               backoff:
+                 firstBackoff: 50ms
+                 maxBackoff: 500ms
+            - name: CircuitBreaker
+              args:
+                name: userService
+                fallbackUri: forward:/userFallback #to an internal controller or handler within the gateway app
+        - id: configServer
+          uri: lb://EXTERNAL-CONFIGURATION-SERVICE
+          predicates:
+            - Path=/config/**
+          filters:
+            - RewritePath=/config/(?<segment>.*),/$\{segment}
 
 
 eureka:
@@ -35,16 +36,16 @@ eureka:
     serviceUrl:
       defaultZone: http://service-discovery:8080/eureka/
 
-#resilience4j:
-#  circuitbreaker:
-#    instances:
-#      userService:
-#        slidingWindowSize: 10                     #unit request
-#        permittedNumberOfCallsInHalfOpenState: 5  #unit request
-#        failureRateThreshold: 50                  #percent
-#        waitDurationInOpenState: 10000            #10 seconds
-#        registerHealthIndicator: true
-#  timelimiter:
-#    instances:
-#      userService:
-#        timeoutDuration: 2s
+resilience4j:
+  circuitbreaker:
+    instances:
+      userService:
+        slidingWindowSize: 10                     #unit request
+        permittedNumberOfCallsInHalfOpenState: 5  #unit request
+        failureRateThreshold: 50                  #percent
+        waitDurationInOpenState: 10000            #10 seconds
+        registerHealthIndicator: true
+  timelimiter:
+    instances:
+      userService:
+        timeoutDuration: 2s
